# miller

./: .gitignore  Makefile.custom  configure.ac
.github/workflows/: release.yml
c/: mlrmain.c
c/lib/: Makefile.am  Makefile.in  mlrutil.c
c/output/: lrec_writer_pprint.c
go/: Makefile  go.mod  go.sum
go/src/miller/output/: record_writer_pprint.go  record_writer_xtab.go
